// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel]} 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:14)"
`;

exports[`snippet: #0 format[babel]} 2`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:14)"
`;

exports[`snippet: #0 format[babel]} 3`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:14)"
`;

exports[`snippet: #0 format[babel]} 4`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #0 format[babel]} 5`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^"
`;

exports[`snippet: #0 format[babel]} 6`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^
Cause: Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`?"
`;

exports[`snippet: #0 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^"
`;

exports[`snippet: #0 format[babel]} 8`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^"
`;

exports[`snippet: #1 format[babel]} 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:14)"
`;

exports[`snippet: #1 format[babel]} 2`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:14)"
`;

exports[`snippet: #1 format[babel]} 3`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:14)"
`;

exports[`snippet: #1 format[babel]} 4`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #1 format[babel]} 5`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^"
`;

exports[`snippet: #1 format[babel]} 6`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^
Cause: Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`?"
`;

exports[`snippet: #1 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^"
`;

exports[`snippet: #1 format[babel]} 8`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^"
`;

exports[`snippet: #2 format[babel]} 1`] = `
"Unexpected token (1:16)
> 1 | let x2 = <div><</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #2 format[babel]} 2`] = `
"Unexpected token (1:16)
> 1 | let x2 = <div><</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #2 format[babel]} 3`] = `
"Unexpected token (1:16)
> 1 | let x2 = <div><</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #2 format[babel]} 4`] = `
"Unexpected token < (1:16)
> 1 | let x2 = <div><</div>;
    |                ^
Cause: Unexpected token <"
`;

exports[`snippet: #2 format[babel]} 5`] = `
"Unexpected token \`<\`, expected the token \`>\` (1:16)
> 1 | let x2 = <div><</div>;
    |                ^"
`;

exports[`snippet: #2 format[babel]} 6`] = `
"Identifier expected. (1:16)
> 1 | let x2 = <div><</div>;
    |                ^
Cause: Identifier expected."
`;

exports[`snippet: #2 format[babel]} 7`] = `
"Unexpected token (1:16)
> 1 | let x2 = <div><</div>;
    |                ^"
`;

exports[`snippet: #2 format[babel]} 8`] = `
"Unexpected token (1:16)
> 1 | let x2 = <div><</div>;
    |                ^"
`;

exports[`snippet: #3 format[babel]} 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:21)"
`;

exports[`snippet: #3 format[babel]} 2`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:21)"
`;

exports[`snippet: #3 format[babel]} 3`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:21)"
`;

exports[`snippet: #3 format[babel]} 4`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #3 format[babel]} 5`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^"
`;

exports[`snippet: #3 format[babel]} 6`] = `
"':' expected. (1:21)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                     ^
Cause: ':' expected."
`;

exports[`snippet: #3 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:22)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                      ^"
`;

exports[`snippet: #3 format[babel]} 8`] = `
"Expected \`:\` but found \`}\` (1:21)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                     ^"
`;

exports[`snippet: #4 format[babel]} 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:21)"
`;

exports[`snippet: #4 format[babel]} 2`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:21)"
`;

exports[`snippet: #4 format[babel]} 3`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:21)"
`;

exports[`snippet: #4 format[babel]} 4`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #4 format[babel]} 5`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^"
`;

exports[`snippet: #4 format[babel]} 6`] = `
"':' expected. (1:21)
> 1 | let x4 = <div>{"foo"}></div>;
    |                     ^
Cause: ':' expected."
`;

exports[`snippet: #4 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:22)
> 1 | let x4 = <div>{"foo"}></div>;
    |                      ^"
`;

exports[`snippet: #4 format[babel]} 8`] = `
"Expected \`:\` but found \`}\` (1:21)
> 1 | let x4 = <div>{"foo"}></div>;
    |                     ^"
`;

exports[`snippet: #5 format[babel]} 1`] = `
"Unexpected token (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^
Cause: Unexpected token (1:22)"
`;

exports[`snippet: #5 format[babel]} 2`] = `
"Unexpected token (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^
Cause: Unexpected token (1:22)"
`;

exports[`snippet: #5 format[babel]} 3`] = `
"Unexpected token (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^
Cause: Unexpected token (1:22)"
`;

exports[`snippet: #5 format[babel]} 4`] = `
"Unexpected token < (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^
Cause: Unexpected token <"
`;

exports[`snippet: #5 format[babel]} 5`] = `
"Unexpected token \`<\`, expected the token \`>\` (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^"
`;

exports[`snippet: #5 format[babel]} 6`] = `
"':' expected. (1:21)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                     ^
Cause: ':' expected."
`;

exports[`snippet: #5 format[babel]} 7`] = `
"Unexpected token (1:23)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                       ^"
`;

exports[`snippet: #5 format[babel]} 8`] = `
"Expected \`:\` but found \`}\` (1:21)
> 1 | let x4 = <div>{"foo"}<</div>;
    |                     ^"
`;

exports[`snippet: #6 format[babel]} 1`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:14)"
`;

exports[`snippet: #6 format[babel]} 2`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{'}'}\`? (1:14)"
`;

exports[`snippet: #6 format[babel]} 3`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:14)"
`;

exports[`snippet: #6 format[babel]} 4`] = `
"Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^
Cause: Unexpected token \`}\`. Did you mean \`&rbrace;\` or \`{"}"}\`?"
`;

exports[`snippet: #6 format[babel]} 5`] = `
"Unexpected token \`}\`. Did you mean \`{'}'}\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #6 format[babel]} 6`] = `
"Expression expected. (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^
Cause: Expression expected."
`;

exports[`snippet: #6 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #6 format[babel]} 8`] = `
"Unexpected token (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #7 format[babel]} 1`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:14)"
`;

exports[`snippet: #7 format[babel]} 2`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{'>'}\`? (1:14)"
`;

exports[`snippet: #7 format[babel]} 3`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:14)"
`;

exports[`snippet: #7 format[babel]} 4`] = `
"Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^
Cause: Unexpected token \`>\`. Did you mean \`&gt;\` or \`{">"}\`?"
`;

exports[`snippet: #7 format[babel]} 5`] = `
"Unexpected token \`>\`. Did you mean \`{'>'}\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #7 format[babel]} 6`] = `
"Expression expected. (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^
Cause: Expression expected."
`;

exports[`snippet: #7 format[babel]} 7`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #7 format[babel]} 8`] = `
"Unexpected token (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #8 format[babel]} 1`] = `
"Unexpected token (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #8 format[babel]} 2`] = `
"Unexpected token (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #8 format[babel]} 3`] = `
"Unexpected token (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^
Cause: Unexpected token (1:15)"
`;

exports[`snippet: #8 format[babel]} 4`] = `
"Unexpected token { (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^
Cause: Unexpected token {"
`;

exports[`snippet: #8 format[babel]} 5`] = `
"Unexpected token \`{\`, expected the token \`>\` (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^"
`;

exports[`snippet: #8 format[babel]} 6`] = `
"'>' expected. (1:23)
> 1 | let x6 = <div><{"foo"}</div>;
    |                       ^
Cause: '>' expected."
`;

exports[`snippet: #8 format[babel]} 7`] = `
"Unexpected token (1:16)
> 1 | let x6 = <div><{"foo"}</div>;
    |                ^"
`;

exports[`snippet: #8 format[babel]} 8`] = `
"Expected \`>\` but found \`<\` (1:23)
> 1 | let x6 = <div><{"foo"}</div>;
    |                       ^"
`;
